@@ -1,5 +1,10 @@
 2008-04-06 Gerd Kohlberger <gerdk@svn.gnome.org>
 
+	* src/mt-main.c: Don't send right-clicks too fast. This helps
+	to avoid running into active pointer grabs. (eg. gnome-panel)
+	
+2008-04-06 Gerd Kohlberger <gerdk@svn.gnome.org>
+
 	* src/Makefile.am: LDFLAGS -> LDADD.
 	Make sure '-Wl,--as-needed' works correctly. Fixes bug #525032.
 
